--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <hr />
     <h2>Rhinoceros</h2>
     <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/pCW-D3IG4dY?si=s1inDfZe4zncC-Gq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </p>
+    <p>
         References
         <ul>
             <li><a href="https://en.wikipedia.org/wiki/Rhinoceros_(play)" target="_blank">Rhinoceros</a> by Eugène Ionesco</li>
