--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/pCW-D3IG4dY?si=s1inDfZe4zncC-Gq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </p>
     <p>
-        References
-        <ul>
-            <li><a href="https://en.wikipedia.org/wiki/Rhinoceros_(play)" target="_blank">Rhinoceros</a> by Eugène Ionesco</li>
-            <li><a href="https://pursuitofwonder.com/product/the-art-of-living-a-meaningless-existence-ideas-from-philosophy-that-change-the-way-you-think" target="_blank">The Art of Living a Meaningless Existence: Ideas from Philosophy That Change the Way You Think</a> by Robert Pantano</li>
-        </ul>
+        "The transformation of Berenger from an apathetic, alcoholic, and ennui- ridden man into the savior of humanity constitutes the major theme of Rhinoceros, and the major existential struggle: one must commit oneself to a significant cause in order to give life meaning."
+        <sup>2</sup>
     </p>
+    <h3>References</h3>
+    <ol>
+        <li><a href="https://en.wikipedia.org/wiki/Rhinoceros_(play)" target="_blank">Rhinoceros</a> by Eugène Ionesco</li>
+        <li><a href="https://www.sparknotes.com/drama/rhinoceros/themes/">Rhinoceros "Themes"</a> from Spark Notes</li>
+        <li><a href="https://pursuitofwonder.com/product/the-art-of-living-a-meaningless-existence-ideas-from-philosophy-that-change-the-way-you-think" target="_blank">The Art of Living a Meaningless Existence: Ideas from Philosophy That Change the Way You Think</a> by Robert Pantano</li>
+    </ol>
     <h2>Hooded Savior</h2>
     <p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/0WmLI_bzlys?si=ex3Pnfmf4CwTBOoo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
